Package: aroma.core
===================

Version: 2.13.1-9000 [2015-09-17]
o CLEANUP: One rowMads(..., centers) to rowMads(..., center).
o CLEANUP: Drop prototype code never used.
o CLEANUP: Defuncted previously deprecated methods: nbrOfArrays() for
  readData() for AromaMicroarrayDataSetTuple, AromaMicroarrayDataSet and
  AromaUnitTotalCnBinarySet, as well as readData() for SampleAnnotationFile.
o CLEANUP: Removed previously (Feb 2014) defunct method patchPackage(),
  patch() and downloadPackagePatch().
o BUG FIX: writeRegions(..., format="wig") gave an error.


Version: 2.13.1 [2015-05-25]
o Package now requires R (>= 3.1.1) released July 2014. This allows us
  to use BioC (>= 3.0) (October 2014).
o Relaxed sanity checks; now it's possible to allocate Aroma tabular
  binary files with 200e6 rows (was 100e6 rows).
o getOutputDataSet() for AromaTransform gives more informative error
  messages.
o ROBUSTNESS: exportAromaUnitPscnBinarySet() asserts that no
  duplicated files are returned.
o ROBUSTNESS: Package now declares all S3 methods.
o BUG FIX: getOutputDataSet() for AromaTransform would sometimes given
  an error due to the same output file being identified more than
  once, for instance, when the full name of an output file is also
  the prefix of another file.  Thanks to Benilton Carvalho (Universidade
  Estadual de Campinas, Sao Paulo, Brazil) for reporting on this.
o BUG FIX: extractRawMirroredAlleleBFractions() for RawAlleleBFractions
  gave "Error in setSignals(res, dh) : object 'res' not found".


Version: 2.13.0 [2015-01-07]
o Bumped version for CRAN submission.
o Updated package dependencies.
o Package passes all redundancy tests.


Version: 2.12.8 [2014-09-19]
o BUG FIX: display() for Explorer would try to open a pathname
  in a way that only worked on Windows.  Thanks to Sunghee Oh
  (S. Korea) for reporting on this.


Version: 2.12.7 [2014-09-04]
o ROBUSTNESS: Wherever needed, files are now copied without preserving